Update project to Java 17; Pump junit-jupiter to latest major release version;